Inicio de criação na regra de negócio e ajustes na validação